docs/v0.2.0a51/_sources/reference/_autosummary/hpcflow.sdk.persistence.zarr.ZarrPersistentStore.rst.txt
hpcflow.sdk.persistence.zarr.ZarrPersistentStore
================================================

.. currentmodule:: hpcflow.sdk.persistence.zarr

.. autoclass:: ZarrPersistentStore
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~ZarrPersistentStore.add_EAR
      ~ZarrPersistentStore.add_element
      ~ZarrPersistentStore.add_element_iteration
      ~ZarrPersistentStore.add_element_set
      ~ZarrPersistentStore.add_file
      ~ZarrPersistentStore.add_loop
      ~ZarrPersistentStore.add_set_parameter
      ~ZarrPersistentStore.add_submission
      ~ZarrPersistentStore.add_submission_attempt
      ~ZarrPersistentStore.add_task
      ~ZarrPersistentStore.add_template_components
      ~ZarrPersistentStore.add_unset_parameter
      ~ZarrPersistentStore.cached_load
      ~ZarrPersistentStore.check_parameters_exist
      ~ZarrPersistentStore.copy
      ~ZarrPersistentStore.delete
      ~ZarrPersistentStore.delete_no_confirm
      ~ZarrPersistentStore.get_EAR_skipped
      ~ZarrPersistentStore.get_EARs
      ~ZarrPersistentStore.get_creation_info
      ~ZarrPersistentStore.get_element_iterations
      ~ZarrPersistentStore.get_elements
      ~ZarrPersistentStore.get_fs_path
      ~ZarrPersistentStore.get_loops
      ~ZarrPersistentStore.get_loops_by_IDs
      ~ZarrPersistentStore.get_parameter_set_statuses
      ~ZarrPersistentStore.get_parameter_sources
      ~ZarrPersistentStore.get_parameters
      ~ZarrPersistentStore.get_submissions
      ~ZarrPersistentStore.get_submissions_by_ID
      ~ZarrPersistentStore.get_task
      ~ZarrPersistentStore.get_task_elements
      ~ZarrPersistentStore.get_tasks
      ~ZarrPersistentStore.get_tasks_by_IDs
      ~ZarrPersistentStore.get_template
      ~ZarrPersistentStore.get_template_components
      ~ZarrPersistentStore.make_test_store_from_spec
      ~ZarrPersistentStore.prepare_test_store_from_spec
      ~ZarrPersistentStore.reinstate_replaced_dir
      ~ZarrPersistentStore.remove_path
      ~ZarrPersistentStore.remove_replaced_dir
      ~ZarrPersistentStore.rename_path
      ~ZarrPersistentStore.save
      ~ZarrPersistentStore.set_EAR_end
      ~ZarrPersistentStore.set_EAR_skip
      ~ZarrPersistentStore.set_EAR_start
      ~ZarrPersistentStore.set_EAR_submission_index
      ~ZarrPersistentStore.set_file
      ~ZarrPersistentStore.set_jobscript_job_ID
      ~ZarrPersistentStore.set_jobscript_submit_time
      ~ZarrPersistentStore.set_jobscript_version_info
      ~ZarrPersistentStore.set_parameter_value
      ~ZarrPersistentStore.to_zip
      ~ZarrPersistentStore.update_loop_num_iters
      ~ZarrPersistentStore.update_param_source
      ~ZarrPersistentStore.using_resource
      ~ZarrPersistentStore.write_empty_workflow
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ZarrPersistentStore.has_pending
      ~ZarrPersistentStore.logger
      ~ZarrPersistentStore.ts_fmt
      ~ZarrPersistentStore.zarr_store
   
   